--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
-        username: $DOCKERHUB_USERNAME
-        password: $DOCKERHUB_TOKEN
+        username: ${{env.DOCKERHUB_USERNAME}}
+        password: ${{env.DOCKERHUB_TOKEN}}
   
     - name: Build and push
       uses: docker/build-push-action@v2
